Closed
Bug 719575
Opened 14 years ago
Closed 14 years ago
gfx broke my clang builds
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)
References
Details
Attachments
(1 file)
|
1.45 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
/Users/ehsanakhgari/moz/oak/gfx/skia/src/effects/SkGradientShader.cpp:1998:17: warning: unused function 'atan_0_90' [-Wunused-function]
static unsigned atan_0_90(SkFixed y, SkFixed x) {
^
1 warning generated.
/Users/ehsanakhgari/moz/oak/gfx/skia/src/ports/SkFontHost_mac_coretext.cpp:799:28: error: non-constant-expression cannot be narrowed from type 'CGFloat' (aka 'double') to 'SkScalar' (aka 'float') in initializer list
const SkPoint trans = {SkFloatToScalar(vertOffset.width),
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/ehsanakhgari/moz/oak/gfx/skia/include/core/SkScalar.h:111:37: note: expanded from:
#define SkFloatToScalar(n) (n)
^~~
/Users/ehsanakhgari/moz/oak/gfx/skia/src/ports/SkFontHost_mac_coretext.cpp:799:28: note: override this message by inserting an explicit cast
const SkPoint trans = {SkFloatToScalar(vertOffset.width),
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/ehsanakhgari/moz/oak/gfx/skia/include/core/SkScalar.h:111:37: note: expanded from:
#define SkFloatToScalar(n) (n)
^~~
/Users/ehsanakhgari/moz/oak/gfx/skia/src/ports/SkFontHost_mac_coretext.cpp:800:28: error: non-constant-expression cannot be narrowed from type 'CGFloat' (aka 'double') to 'SkScalar' (aka 'float') in initializer list
SkFloatToScalar(vertOffset.height)};
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/ehsanakhgari/moz/oak/gfx/skia/include/core/SkScalar.h:111:37: note: expanded from:
#define SkFloatToScalar(n) (n)
^~~
/Users/ehsanakhgari/moz/oak/gfx/skia/src/ports/SkFontHost_mac_coretext.cpp:800:28: note: override this message by inserting an explicit cast
SkFloatToScalar(vertOffset.height)};
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/ehsanakhgari/moz/oak/gfx/skia/include/core/SkScalar.h:111:37: note: expanded from:
#define SkFloatToScalar(n) (n)
^~~
2 errors generated.
| Assignee | ||
Comment 1•14 years ago
|
||
| Assignee | ||
Updated•14 years ago
|
Blocks: clang-macosx
Updated•14 years ago
|
Attachment #589973 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 2•14 years ago
|
||
Target Milestone: --- → mozilla12
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•