Bug 719575 - Fix clang builds which are broken now because of Skia changes; r=mattwoodrow

--HG--
extra : rebase_source : 0470d992199f094b60fb16032415b6f6e00ff720